style.css
/* ... */
div.lowerPart {
  overflow: hidden;
  width: 100%;
}

div.buttonScroll {
  /*background-color: var(--primary-red);*/
  width: 100%;
  height: 4rem;
  padding: 0.5rem;
  display: flex;
  align-items: center;
  gap: 0.5rem;
  overflow: hidden;
  overflow-x: auto;
}

div.buttonScroll::-webkit-scrollbar {
  height: 0.3rem;
  box-shadow: var(--shadow);
}

div.buttonScroll::-webkit-scrollbar-thumb {
  background-color: lightgray;
  border-radius: 100rem;
}

div.buttonScroll::-webkit-scrollbar-track {
  height: 0.3rem;
  background: rgba(211, 211, 211, 0.192);
}

div.titleContainer {
  font-family: 'Inter';
  display: flex;
  flex-direction: row;
  align-items: center;
  padding-left: 0.4rem;
  padding-right: 0.4rem;
  padding-top: 0.3rem;
  width: 100%;
  max-width: calc(100vw - 8rem);
  font-size: var(--title-size);
  font-weight: var(--title-weight);
  text-transform: capitalize;
  overflow: hidden;
  overflow-x: auto;
  text-overflow: ellipsis;
}

p.loadingText {
  position: relative;
  color: var(--secondary-brown);
}

p.loadingText::after {
  content: 'loading...';
  animation: loading 2s linear infinite;
}

@keyframes loading {
  25% {
    content: 'loading';
  }

  50% {
    content: 'loading.';
  }

  75% {
    content: 'loading..';
  }

  100% {
    content: 'loading...';
  }
}

b.decoratedTitle {
  color: var(--primary-color);
  text-transform: uppercase;
  margin-left: 0.2rem;
}

b.buttonText {
  font-size: var(--body-size);
  font-weight: var(--title-weight);
  font-family: 'Inter';
}

button.quickButton {
  flex-shrink: 0;
  color: white;
  background-color: var(--primary-color);
  border: none;
  height: 100%;
  width: 8rem;
  min-width: fit-content;
  border-radius: var(--button-border-radius);
  transition: all 0.3s;
  box-shadow: var(--shadow);
}

button.quickButton:hover {
  filter: brightness(0.9);
  transition: all 0.3s;
}

img.icon {
  margin-right: 0.5rem;
}

div.body {
  width: 100%;
  height: calc(100vh - 11rem);
  /*background-color: var(--primary-blue);*/
}

div.section {
  /*background-color: var(--primary-green);*/
  height: 100%;
  padding: 0.5rem;
}


.hidden {
  display: none !important;
  z-index: -99 !important;
}

div.sidebar {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: .4rem;
  z-index: 3;
  position: fixed;
  top: 0;
  left: -20rem;
  background: var(--primary-color);
  box-shadow: var(--shadow);
  height: 100vh;
  width: 20rem;
  border-top-right-radius: var(--sidebar-border-radius);
  border-bottom-right-radius: var(--sidebar-border-radius);
  transition: all 0.3s;
}

div.sidebar.open {
  left: 0;
  transition: all 0.3s;
}

div.popup {
  color: var(--body-text-color);
  z-index: 3;
  position: fixed;
  bottom: -60vh;
  left: 0;
  width: 100vw;
  height: 60vh;
  background: white;
  border-top-left-radius: var(--sidebar-border-radius);
  border-top-right-radius: var(--sidebar-border-radius);
  transition: all 0.3s;
  box-shadow: var(--shadow);
}

div.popup.open {
  bottom: 0;
  transition: all 0.3s;
}

div.overlay {
  position: fixed;
  top: 0;
  left: 0rem;
  width: 100vw;
  height: 100vh;
  display: none;
  z-index: 2;
  background: rgba(0, 0, 0, 0.151);
  transition: all 0.3s;
}

div.overlay.visible {
  display: block;
  transition: all 0.3s;
}

h2.subtitle {
  font-size: 1.4rem;
  font-family: 'Inter';
  font-weight: bold;
}

div.eventContainer {
  display: flex;
  flex-direction: column;
  gap: 0.3rem;
  padding: 0.3rem;
  width: 100%;
  height: calc(100% - 2.5rem);
  background-color: var(--minor-color);
  border-radius: var(--general-border-radius);
  padding-bottom: 4rem;
}


div.eventsList::-webkit-scrollbar {
  width: 0.5rem;
  box-shadow: var(--shadow);
}

div.eventsList::-webkit-scrollbar-thumb {
  background-color: lightgray;
  border-radius: 100rem;
}

div.eventsList::-webkit-scrollbar-track {
  background: rgba(211, 211, 211, 0.192);
}

div#eventPlaceholder.visible {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
  align-items: center;
}

img.emptyImg {
  width: 70%;
  max-width: 25rem;
  margin-bottom: 1.5rem;
}

p.infoText {
  font-size: var(--body-size);
  color: var(--primary-color);
  font-weight: bold;
}

div.eventsList {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  gap: 0.5rem;
  overflow: hidden;
  overflow-y: auto;
  padding-right: .2rem;
}

div.upcomingEvent {
  position: relative;
  display: flex;
  flex-direction: row;
  gap: 0.5rem;
  padding: 0.5rem;
  background-color: white;
  border-radius: var(--general-border-radius);
  transition: all 0.3s;
  width: 100%;
  height: 6rem;
  overflow: hidden;
  box-shadow: var(--shadow);
  flex-shrink: 0;
}

@keyframes popUp {
  0% {
    transform: scale(0.5);
  }

  100% {
    transform: scale(1);
  }
}

h3.eventTitle {
  font-size: calc(var(--body-size) + 0.2rem);
  font-weight: bold;
  font-family: 'Inter';
  text-transform: capitalize;
  margin: 0;
  margin-top: .3rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

p.eventInfo {
  font-size: var(--desctiprion-size);
  font-family: 'Itim';
  color: var(--note-text-color);
  margin: 0;
  text-overflow: ellipsis;
  display: -webkit-box;
  line-clamp: 2;
  -webkit-line-clamp: 2;
  -webkit-box-orient: vertical;
  overflow: hidden;
}

button.eventButton {
  height: 70%;
  aspect-ratio: 1/1;
  background-color: var(--primary-color);
  background: var(--primary-color);
  border-radius: var(--button-border-radius);
  border: none;
  transition: all 0.3s;
}

button.eventButton:hover {
  filter: brightness(0.9);
  transition: all 0.3s;
}

div.eventInfoContainer {
  display: flex;
  flex-direction: column;
  gap: 0.2rem;
  width: calc(100% - 7.3rem);
  height: 100%;
  justify-content: center;
  z-index: 1;
}

img.eventIcon {
  width: 1.5rem;
}

div.eventButtonContainer {
  display: flex;
  align-items: center;
}
/* ... */

